<?xml version="1.0"?>
<package format="3">
  <name>mqtt_bridge</name>
  <version>0.0.0</version>
  <description>MQTT bridge package</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ublox_msgs</depend>

</package>
